--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1085,3 +1085,84 @@ chapter = {6},
     howpublished = "\url{https://cfs.nrcan.gc.ca/statsprofile/}",
     note = "[Online; accessed 13-July-2022]"
     }
+
+@misc{CanadianNutrientFile,
+    author = {{Health Canada}},
+    title = {{Canadian Nutrient File}},
+    institution  = {{Health Canada}},
+    year = {202},
+    howpublished = "\url{https://food-nutrition.canada.ca/cnf-fce/index-eng.jsp}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@techreport{Moccia2007,
+    author = {Moccia, R. D. and Bevan, D. J. and Reid, G.K.},
+    title = {{Composition of fecal waste from commercial trout farms in Ontario: macro and micro nutrient analysis and recommendations for recycling}},
+    institution  = {Ontario Sustainable Aquaculture Working Group},
+    year = {2013},
+    }
+
+@misc{StatisticsCanadaAquaculture,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Aquaculture, production and value}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2021},
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210010701}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@article{bureau2003chemical,
+  title={{Chemical composition and preliminary theoretical estimates of waste outputs of rainbow trout reared in commercial cage culture operations in Ontario}},
+  author={Bureau, Dominique P and Gunther, Stephen J and Cho, C Young},
+  journal={North American Journal of Aquaculture},
+  volume={65},
+  number={1},
+  pages={33--38},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@misc{OntarioAquaculture,
+    author = {{Ontario Ministry of the Environment, Conservation and Parks}},
+    title = {{Provincial policy objectives for managing effects of cage aquaculture operations on the quality of water and sediment in Ontario’s waters}},
+    institution  = {{Ontario Ministry of the Environment, Conservation and Parks}},
+    year = {2019},
+    howpublished = "\url{https://ero.ontario.ca/notice/012-7186}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@misc{FoodAvailableCanada,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Food available in Canada}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://open.canada.ca/data/en/dataset/a683c640-b5fd-48f8-a0f1-d619b8f7e04c}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@misc{PopulationCanada,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Population estimates, quarterly}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710000901}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@misc{TradeDataOnlineCanada,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Trade Data Online}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://www.ic.gc.ca//app/scr/tdst/tdo/crtr.html?&productType=HS6&lang=eng}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@misc{FoodLossesFAO,
+    author = {{FAO}},
+    title = {{Global food losses and food waste - Extent, causes and prevention}},
+    institution  = {{Food and Agriculture Organization of the United Nations}},
+    year = {2011},
+    howpublished = "\url{https://www.fao.org/3/i2697e/i2697e.pdfg}",
+    note = "[Online; accessed 15-July-2022]"
+    }
