--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -181,7 +181,12 @@ Phosphorus flows through WWTPs is estimated combining data from the National Pol
 	\label{fig:MethodWWTPs}
 \end{figure}
 
-Phophorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}
+However, there exist households that are not connected to any sewer systems. These households are equipped with septic systems to perform a rough treatment of the wastewater produced prior to its release into the environment, which typically consist into a septic tank that separates solid matter from the wastewater, and a drainfield where the effluent is discharged. The estimation of phosphorus releases from septic systems is based on the fraction of households equipped with these systems, estimated on 13\% \citep{CanadaSepticSystems}, which are inhabited by an average of 2.58 individuals \citep{CanadaPersonPerHouse}, and the average phosphorus load rate from septic systems, which is estimated on 0.81 kg of phosphor per person per year for the Lake Erie Basin in Ontario by \citet{oldfield2020estimation}.
+
+Phophorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
+
+\subsection{Phosphorus recovery techniques \textbf{(This section could be Supplementary Material)}}
+Brief overview of potential P recovery techniques for each sector
 
 \section{Results and discussion}
 \subsection{Phosphorus flows in Ontario}
@@ -199,8 +204,6 @@ Figure \ref{fig:FigFlowsSummary} summarizes the phosphorus flows in the province
 
 The production of animal food products exhibits a lower phosphorus use efficiency than the production of plant base products, similarly to the use effciciency of other resources such as water CITE HERE, CALCULAR ENTRA VS SALE!
 
-\subsection{Phosphorus recovery techniques \textbf{(This section could be Supplementary Material)}}
-Brief overview of potential P recovery techniques for each sector
 \subsubsection{Agricultural sector}
 
 \subsubsection{Industrial sector}
