--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1166,3 +1166,32 @@ chapter = {6},
     howpublished = "\url{https://www.fao.org/3/i2697e/i2697e.pdfg}",
     note = "[Online; accessed 15-July-2022]"
     }
+
+@article{oldfield2020estimation,
+  title={Estimation of phosphorus loads from septic systems to tributaries in the Canadian Lake Erie Basin},
+  author={Oldfield, Lauren and Rakhimbekova, Sabina and Roy, James W and Robinson, Clare E},
+  journal={Journal of Great Lakes Research},
+  volume={46},
+  number={6},
+  pages={1559--1569},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@misc{CanadaSepticSystems,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Sewer and septic system connections. Households and the Environment}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2015},
+    howpublished = "\url{https://www150.statcan.gc.ca/n1/pub/11-526-x/2013001/t059-eng.htm}",
+    note = "[Online; accessed 15-July-2022]"
+    }
+
+@misc{CanadaPersonPerHouse,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Estimated number of households and average household size by domain, Canada. User guide for the survey of household spending}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2017},
+    howpublished = "\url{https://www150.statcan.gc.ca/n1/pub/62f0026m/2017002/app-ann-g-eng.htm}",
+    note = "[Online; accessed 15-July-2022]"
+    }
