--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -213,6 +213,15 @@ The production of animal food products exhibits a lower phosphorus use efficienc
 \subsection{Potential of phosphorus recovery in Ontario}
 Assessment of different scenarios of P recovery in Ontario, P imports that would be saved, reduction of P dependency of the province, etc (all implications related with mass-balances)
 
+\subsubsection{Agricultural sector}
+Phosphorus can be recovered from different flows within the agricultural sector, including the production of manure. Phosphorus recovery from manure is performed through struvite precipitation.There exist different processes for struvite production at commercial stage, as described in Section ?REF?. \citet{martin2021geospatial} determined that the implementation of struvite production processes at livestock facilities is mainly driven by the scale of the CAFO, and thus they can be divided by into three clusters regarding the type of phosphorus recovery processes implemented, i.e., facilities with capacity for between 300 and 2,000 animal units, for between 2,000 and 5,000 animals units, and facilities large than 5,000 animal units. An animal unit (AU) is defined as an animal equivalent of 1,000 pounds (453.6 kg) live weight \citep{animal_unit_definition}. The most suitable phosphorus recovery for process for the facilities of each one of these clusters was determined by \citet{martin2021geospatial}, resulting in that  Multiform-type processes are the most suitable struvite produciton system for the cluster including the small-size CAFOs cluster (300-2,000 AUs), NuReSys-type systems are suitable for medium-size CAFOs (2,00-5,000 AUs), while that the suitable struvite system for large-scale CAFOs is Crystalactor-type processes. The investment and operating cost of these systems is collected in Table ?REF?.
+
+The number of cattle animals is reported by the Census of Agriculture at Census Division level REF, but no available data on CAFOs size is available for the province of Ontario. Since this information is essential to determine the suitable phopshorus recovery process to be considered, and in turn the phosphorus recovery cost, the distribution of CAFOs sizes has been approximated to the CAFOs size distribution of other regions in the Great Lakes area, namely Ohio, Pennsylvania, Indiana, Michigan, and Wisconsin. The distribution of CAFOs size in each one of these regions has been approximated through a truncated normal distribution, since the possible size of livestock facilities is bounded between 300 animal units for being considered as an intensive livestock production facility REF, and 10,000 animal units in order to remove extra-large CAFOs that are outliers in the size distribution, avoiding excessive long tails distorting the distributions., as show in equation EQ REF. It has been found that two scenarios can be identified, a first scenario (Scenario 1) where the average size of CAFOs is larger, around 2,400 animal units based on the parameters of the states of Ohio, Wisconsin, and Michigan, and a second scenario(Scenario 2) based on the states of Pennsylvania and Indiana where the average size of CAFOs is smaller, lower than 1,500 animal units. Two hypothetical distributions for the CAFOs size in Ontario are proposed based on each one of these scnerarios, estimating the parameters of Eq. REF as the average parameters of the distributions in each scenario. These parameters are shown in Table ??, resulting in the CAFOs size distributions shown in Figure ??. Further details on the estimation of CAFOs size distribution can be found in the Supplementary Information, Section ??.
+
+\subsubsection{Industrial sector}
+
+\subsubsection{Urban sector}
+
 \subsection{Economic implications of phosphorus recovery in Ontario}
 Economic costs or saving derived from the recovery of P in the province and all implications related with economy
 
